# symphony-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  WORKFLOW.md  WORKFLOW.md.Linear.md  WORKFLOW.md.github  WORKFLOW.md.gitlab  dev.sh
rust-platform/: .env.example  Cargo.toml
rust-platform/src/: cli.rs  error.rs  lib.rs  main.rs  proxy.rs
rust-platform/src/agent/: codex_client.rs  mod.rs  runner.rs
rust-platform/src/config/: mod.rs  platform.rs  service_config.rs  validator.rs  watcher.rs  workflow_loader.rs
rust-platform/src/logging/: mod.rs
rust-platform/src/models/: mod.rs
rust-platform/src/orchestrator/: mod.rs  reconciler.rs  retry.rs  scheduler.rs
rust-platform/src/platform/: cooldown_queue.rs  gitea.rs  github.rs  gitlab.rs  http_client.rs  issue.rs  memory.rs  mod.rs  retry.rs  workflow.rs
rust-platform/src/prompt/: mod.rs
rust-platform/src/server/: api.rs  mod.rs
rust-platform/src/tools/: linear_graphql.rs  mod.rs  platform_api.rs
rust-platform/tests/: README.md  config_validator_test.rs  cooldown_queue_test.rs  e2e_config_reload.rs  e2e_http_server.rs  e2e_lifecycle.rs  e2e_multi_turn.rs  e2e_shutdown.rs  e2e_test.rs  fault_injection_test.rs  gitea_adapter_test.rs  github_adapter_test.rs  integration_test.rs  integration_tests.rs  orchestrator_test.rs  platform_api_tool_test.rs  proxy_static_guard.rs  real_full_lifecycle.rs  real_linear_smoke.rs  real_platform_smoke.rs  real_workflow_codex.rs  real_workflow_gitea.rs  real_workflow_gitlab.rs  resume_recovery_contract.rs  retry_test.rs  unit_tests.rs  workspace_gc_contract.rs
web-platform/: Cargo.toml
web-platform/migrations/: V001__init_schema.sql  V002__projects_extend.sql  V003__phase4_concurrency.sql  V004__phase5_alerts.sql  V005__workflow_hooks_codex.sql  V006__resume_recovery_lifecycle.sql  V007__network_proxy.sql  V008__project_service_proxy_version.sql  V009__mr_create_idempotency.sql  V010__testing_config.sql  V011__gitea_token.sql  V012__drop_testing_unused_fields.sql
web-platform/src/: config.rs  crypto.rs  error.rs  git_url.rs  lib.rs  main.rs  proxy.rs  router.rs  shutdown.rs
web-platform/tests/: api_admin_users.rs  api_auth.rs  api_concurrency.rs  api_members.rs  api_projects.rs  api_service.rs  api_user_profile.rs  api_workflow.rs  e2e.rs  mr_create_idempotency.rs  network_proxy_contract.rs  phase3_api.rs  phase3_gitlab_client.rs  phase5_alerts_api.rs  resume_recovery_contract.rs
(+339 files in other folders)
