[package]
name = "symphony-platform"
version = "0.1.0"
edition = "2021"
description = "Platform adapter for Symphony - supports GitHub and GitLab issue/PR workflows"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
urlencoding = "2"
liquid = "0.26"
notify = "6"
arc-swap = "1"
libc = "0.2"
axum = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.13"
assert_matches = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
base64 = "0.22"
regex = "1"
