[package]
name = "web-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
refinery = { version = "0.8", features = ["rusqlite"] }
jsonwebtoken = "9"
argon2 = "0.5"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "url"] }
async-trait = "0.1"
dashmap = "6"
hex = "0.4"
regex = "1"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
urlencoding = "2"
bytes = "1"
hmac = "0.13.0"
sha2 = "0.11.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
